--- a/CA_3_James_Hosking.html
+++ b/CA_3_James_Hosking.html
@@ -2,7 +2,7 @@
 <html lang= 'en'>
     <head>
         <title>CA3_James_Hosking</title>
-        <link rel= "stylesheet" href="style.css" type= text/css>
+        <link rel="stylesheet" type= text/css href="https://arcjim14.github.io/sytle.css>
     
     </head>
     <body>
